# pibypy

./: .env.example  .gitignore  README.md  pi.py  pyproject.toml
tests/: conftest.py
tests/unit_tests/utils/: test_big_math.py
utils/: aggregate.py  big_math.py
